# wasm

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  action.yml  cli.html  design-system.html  docker-compose.yml  docs.html  grpc.html  http.html  index.html  landing.html  release-plz.toml  schema.sql
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/core/: dirs.rs  mod.rs
crates/cli/src/inspect/: mod.rs
crates/cli/src/install/: mod.rs
crates/cli/src/local/: mod.rs
crates/cli/src/package/: mod.rs  search.rs  sync.rs
crates/cli/src/self_/: mod.rs
crates/cli/src/tui/: app.rs  mod.rs
crates/cli/src/tui/components/: mod.rs  tab_bar.rs
crates/cli/src/tui/views/: home.rs  interfaces.rs  known_package_detail.rs  local.rs  mod.rs  package_detail.rs  packages.rs  search.rs  settings.rs  snapshot_tests.rs
crates/cli/src/tui/views/snapshots/: wasm__tui__views__snapshot_tests__interfaces_view_snapshot.snap  wasm__tui__views__snapshot_tests__local_view_snapshot.snap  wasm__tui__views__snapshot_tests__package_detail_view_minimal_snapshot.snap  wasm__tui__views__snapshot_tests__package_detail_view_snapshot.snap  wasm__tui__views__snapshot_tests__packages_view_empty_snapshot.snap  wasm__tui__views__snapshot_tests__packages_view_with_filter_active_snapshot.snap  wasm__tui__views__snapshot_tests__packages_view_with_packages_snapshot.snap  wasm__tui__views__snapshot_tests__search_view_empty_snapshot.snap  wasm__tui__views__snapshot_tests__search_view_with_packages_snapshot.snap  wasm__tui__views__snapshot_tests__search_view_with_search_active_snapshot.snap  (+4 more)
crates/cli/tests/: snapshot.rs  test.rs
crates/cli/tests/snapshots/: snapshot__interfaces_view_populated_snapshot.snap  snapshot__interfaces_view_snapshot.snap  snapshot__interfaces_view_with_entries_snapshot.snap  snapshot__known_package_detail_view_minimal_snapshot.snap  snapshot__known_package_detail_view_snapshot.snap  snapshot__local_view_empty_snapshot.snap  snapshot__local_view_snapshot.snap  snapshot__local_view_with_files_snapshot.snap  snapshot__package_detail_view_snapshot.snap  snapshot__package_detail_view_without_tag_snapshot.snap  snapshot__packages_view_empty_snapshot.snap  snapshot__packages_view_filter_with_results_snapshot.snap  snapshot__packages_view_with_filter_active_snapshot.snap  snapshot__packages_view_with_packages_snapshot.snap  snapshot__search_view_empty_snapshot.snap  snapshot__search_view_with_many_tags_snapshot.snap  snapshot__search_view_with_packages_snapshot.snap  snapshot__search_view_with_search_active_snapshot.snap  snapshot__settings_view_loading_snapshot.snap  snapshot__settings_view_with_state_info_snapshot.snap  snapshot__tab_bar_error_state_snapshot.snap  snapshot__tab_bar_loading_state_snapshot.snap  snapshot__tab_bar_second_selected_snapshot.snap  test__cli_inspect_help_snapshot.snap  test__cli_local_help_snapshot.snap  test__cli_local_list_help_snapshot.snap  test__cli_main_help_snapshot.snap  test__cli_package_help_snapshot.snap  test__cli_package_pull_help_snapshot.snap  test__cli_package_tags_help_snapshot.snap  test__cli_self_help_snapshot.snap  test__cli_self_state_help_snapshot.snap
crates/component-cli-internal-run/: Cargo.toml
crates/component-cli-internal-run/src/: errors.rs  lib.rs
crates/component-tui/: Cargo.toml  README.md
crates/component-tui/src/: app.rs  lib.rs
crates/component-tui/src/views/: known_package_detail.rs  local.rs  mod.rs  package_detail.rs  packages.rs  search.rs  settings.rs  types.rs
crates/component-tui/tests/: snapshot.rs
crates/component-tui/tests/snapshots/: snapshot__known_package_detail_view_minimal_snapshot.snap  snapshot__known_package_detail_view_snapshot.snap  snapshot__local_view_empty_snapshot.snap  snapshot__local_view_with_files_snapshot.snap  snapshot__log_view_empty_snapshot.snap  snapshot__log_view_scrolled_snapshot.snap  snapshot__log_view_with_lines_snapshot.snap  snapshot__package_detail_view_snapshot.snap  snapshot__package_detail_view_without_tag_snapshot.snap  snapshot__packages_view_empty_snapshot.snap  snapshot__packages_view_filter_with_results_snapshot.snap  snapshot__packages_view_with_filter_active_snapshot.snap  snapshot__packages_view_with_packages_snapshot.snap  snapshot__search_view_empty_snapshot.snap  snapshot__search_view_with_many_tags_snapshot.snap  snapshot__search_view_with_packages_snapshot.snap  snapshot__search_view_with_search_active_snapshot.snap  snapshot__settings_view_loading_snapshot.snap  snapshot__settings_view_with_state_info_snapshot.snap  snapshot__tab_bar_error_state_snapshot.snap  snapshot__tab_bar_loading_state_snapshot.snap  snapshot__tab_bar_third_selected_snapshot.snap  snapshot__types_view_populated_snapshot.snap  snapshot__types_view_snapshot.snap
crates/manifest/: Cargo.toml  README.md
crates/manifest/src/: lib.rs  lockfile.rs  manifest.rs  validation.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/wasm-detector/: Cargo.toml  README.md
crates/wasm-detector/src/: lib.rs
crates/wasm-detector/tests/: tests.rs
crates/wasm-scanner/: Cargo.toml  README.md
crates/wasm-scanner/src/: lib.rs
crates/wasm-tui/: Cargo.toml  README.md
crates/wasm-tui/src/: app.rs  lib.rs
crates/wasm-tui/src/components/: mod.rs
crates/wasm-tui/src/views/: settings.rs
crates/wasm-tui/tests/: snapshot.rs
crates/wasm-tui/tests/snapshots/: snapshot__known_package_detail_view_minimal_snapshot.snap  snapshot__local_view_empty_snapshot.snap  snapshot__local_view_with_files_snapshot.snap  snapshot__packages_view_empty_snapshot.snap  snapshot__packages_view_filter_with_results_snapshot.snap  snapshot__search_view_empty_snapshot.snap  snapshot__search_view_with_packages_snapshot.snap  snapshot__settings_view_with_state_info_snapshot.snap  snapshot__tab_bar_first_selected_snapshot.snap  snapshot__types_view_populated_snapshot.snap  snapshot__types_view_snapshot.snap
crates/xtask/: Cargo.toml
crates/xtask/src/: fixtures.rs  main.rs  readme.rs  serve.rs  sql.rs  test.rs
(+702 files in other folders)
