# [PROJECT_DIR]/Cargo.toml
[workspace]
resolver = "2"
members = ["crates/cli", "crates/store"]

[workspace.package]
version = "0.1.0"
documentation = "https://github.com/yoshuawuyts/wasm"
repository = "https://github.com/yoshuawuyts/wasm"
edition = "2024"
license = "APACHE-2.0 OR MIT"
authors = ["Yosh Wuyts <cargo@yosh.is>", "Josh Duffney <josh@duffney.io>"]
categories = []
keywords = []

[workspace.dependencies]

# local dependencies
wasm-oci-store = { path = "crates/store" }

# shared dependencies
anyhow = "1.0.100"

# OCI dependencies
docker_credential = "1.3.2"
oci-client = { version = "0.15", default-features = false, features = [
    "rustls-tls",
] }
oci-wasm = { version = "0.3.0", default-features = false, features = [
    "rustls-tls",
] }

# cli dependencies
bytesize = "2.3.1"
clap = { version = "4.5.54", features = ["derive", "string"] }
comfy-table = "7.2.1"
dirs = "6.0.0"
insta = "1.44.3"
serde_json = { version = "1.0.145", features = ["alloc"] }
termcolor = "1.4.1"
wasm-metadata = "0.243.0"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"

# store dependencies
cacache = { version = "13.1.0", features = [
    "futures",
    "libc",
    "link_to",
    "memmap2",
    "mmap",
    "tokio",
    "tokio-runtime",
    "tokio-stream",
], default-features = false }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
