[package]
name = "wasm"
description = "Unified WebAssembly developer tools"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
termcolor = { workspace = true }
tokio = { workspace = true }
wasm-metadata = { workspace = true }
wasm-package-manager = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
