[package]
name = "component-tui"
description = "Terminal user interface for the WebAssembly developer tools"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
component-detector = { workspace = true }
component-package-manager = { workspace = true, features = ["http-sync"] }

[dev-dependencies]
insta = { workspace = true }
oci-client = { workspace = true }
semver = { workspace = true }
component-package-manager = { workspace = true }

[lints]
workspace = true
