[package]
name = "wasm-detector"
description = "A library to detect local .wasm files in a repository"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[features]
default = []
# Enable test helpers for use in other crates' tests
test-helpers = []

[dependencies]
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
