[package]
name = "wasm-scanner"
description = "A library to scan local .wasm files in a repository"
readme = "README.md"
repository = { workspace = true }
documentation = { workspace = true }
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
ignore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
